--- a/src/views/menu.liquid
+++ b/src/views/menu.liquid
@@ -5,7 +5,7 @@
    <div class="content">
      <div class="col-sm-4">
        <ul>
-       <li><a href="/">Home</a></li>
+       <li><a href="/issues">Issues</a></li>
        <li><a href="/profiles">Profiles</a></li>
        <li><a href="/essays">Essays</a></li>
        <li><a href="/interviews">Interviews</a></li>
@@ -13,8 +13,9 @@
        <!--<li><a href="/spotlights">Spotlights </a></li>-->
        </ul>
        <div class="footer">
-         <a href="/issues">Issues</a>
-         <a target="blank" href="https://eurasianet.org/podcast/expert-opinions">Podcast</a></li>
+         <a href="/about">About</a>
+         <a target="blank" href="https://eurasianet.org/podcast/expert-opinions">Podcasts</a></li>
+         <a href="https://harriman.givenow.columbia.edu/">Give</a>
         </div>
      </div>
      <div class="col-sm-7">
