--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -90,7 +90,13 @@ body {
     background: #fff !important;
   }
 }
-
+.Light .article-content a {
+  color: #000 !important;
+  text-decoration: underline;
+}
+.Light .article-content h2 {
+  color: #000 !important;
+}
 .Dark {
   color: #111;
   .header-sm {
@@ -268,7 +274,7 @@ body {
   .story-content {
     background: rgba(0,0,0,0.6);
     width: 100%;
-    padding: 40px 80px;
+    padding: 20px 40px;
     color: #fff !important;
     position: absolute;
     bottom: 0;
@@ -277,7 +283,7 @@ body {
       padding: 20px;
     }
     h1 {
-      font-size: 50px;
+      font-size: 30px;
       font-weight: 700;
       @media(max-width: 600px) {
         font-size: 30px;
