--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -81,7 +81,7 @@ body {
   p.translator,
   p.author a {
     font-size: 18px;
-    color: #fff !important;
+    color: #fff;
   }
   a {
     color: #fff !important;
