--- a/src/views/author.liquid
+++ b/src/views/author.liquid
@@ -2,64 +2,60 @@
 
 
 <div class="issue Dark">
-<div class="header-sm" style="background: '#ffffff'};">
- <div class="container">
-   <button class="btn-menu">
-     <span class="bar"></span>
-     <span class="bar"></span>
-     <span class="bar"></span>
-   </button>
- <div class="row">
-   <div class="col-sm-12">
-     <a class="brand" href="/">
-     <div class="logo">Harriman</div>
-     </a>
-  </div>
- </div>
-</div>
-</div>
-
-{% include "menu" %}
-
-
-<div class="page">
-  <div class="container">
-    <div class="row row-author-summary">
-      <div class="col-sm-12">
-        <div
-        class="author-image"
-        style="background: #f9f9f9 url(https://api.magazine.harriman.danmccarey.com/{{ term.image }}) no-repeat center center;"
-        >
+  <div class="header-sm" style="background: '#ffffff'};">
+    <div class="container">
+      <button class="btn-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </button>
+      <div class="row">
+        <div class="col-sm-12">
+          <a class="brand" href="/">
+            <div class="logo">Harriman</div>
+          </a>
         </div>
-        <h1>{{ category }}</h1>
-        <p>{{ term.description }}</p>
-        {{ term.links }}
       </div>
     </div>
-    <div class="row">
-      <div class="story-grid">
-       {% for article in content  %}
-       <div class="col-sm-4">
-        <a href="/article/{{ article.nid }}">
-        <div class="story-grid-column Dark">
-          <div class="story-grid-column--image" style="background: url(https://api.magazine.harriman.danmccarey.com{{ article.field_thumbnail }}) no-repeat; background-size: cover;"></div>
-          <div class="story-grid-column--content">
-             <h2>{{ article.title }}</h2>
-             <p class="subtitle">{{ article.field_subtitle }}</p>
-             <p class="author">{{ article.field_author }}</p>
-          </div>
-          <div class="story-grid-column--mask story-grid-column--mask-left" style="background: #F5F6EB;"></div>
+  </div>
+
+  {% include "menu" %}
+
+
+  <div class="page">
+    <div class="container">
+      <div class="row row-author-summary">
+        <div class="col-sm-12">
+          <div class="author-image" style="background: #f9f9f9 url(https://api.magazine.harriman.danmccarey.com/{{ term.image }}) no-repeat center center; background-size: cover; filter: grayscale();"></div>
+          <h1>{{ category }}</h1>
+          <p>{{ term.description }}</p>
+          {{ term.links }}
         </div>
-        </a>
+      </div>
+      <div class="row">
+        <div class="story-grid">
+          {% for article in content %}
+            <div class="col-sm-4">
+              <a href="/article/{{ article.nid }}">
+                <div class="story-grid-column Dark">
+                  <div class="story-grid-column--image" style="background: url(https://api.magazine.harriman.danmccarey.com{{ article.field_thumbnail }}) no-repeat; background-size: cover;"></div>
+                  <div class="story-grid-column--content">
+                    <h2>{{ article.title }}</h2>
+                    <p class="subtitle">{{ article.field_subtitle }}</p>
+                    <p class="author">{{ article.field_author }}</p>
+                  </div>
+                  <div class="story-grid-column--mask story-grid-column--mask-left" style="background: #F5F6EB;"></div>
+                </div>
+              </a>
+            </div>
+          {% endfor %}
+
         </div>
-       {% endfor %}
+
 
       </div>
-
-
     </div>
   </div>
-</div>
 
 </div>
 
