--- a/src/views/head.liquid
+++ b/src/views/head.liquid
@@ -31,8 +31,8 @@
 	  gtag('config', 'UA-126123515-1');
 	</script>
 
-
+	
 </head>
 <body>
-  <div class="top-bar"><a href="https://www.columbia.edu/">Columbia University in the City of New York</a></div>
+  <div class="top-bar"><a href="https://harriman.columbia.edu/">Harriman Institute at Columbia University</a></div>
   <div class="page">
